force-app/main/default/objects/Field_of_Play__c/Field_of_Play__c.object-meta.xml
<CustomObject>
    <label>Field of Play</label>
    <nameField>
        <label>Field of Play Gold Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field of Play</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>