force-app/main/default/objects/Field_of_Play__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Field_of_Play_Gold_Sheet</relationshipName>
    <type>Lookup</type>
</CustomField>