force-app/main/default/objects/Field_of_Play__c/fields/mh_Associated_Gold_Sheet__c.field-meta.xml
<CustomField>
    <fullName>mh_Associated_Gold_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated Gold Sheet</label>
    <type>Checkbox</type>
</CustomField>