force-app/main/default/objects/Field_of_Play__c/fields/mh_Last_Updated_Gold_Sheet__c.field-meta.xml
<CustomField>
    <fullName>mh_Last_Updated_Gold_Sheet__c</fullName>
    <label>Last Updated Gold Sheet</label>
    <type>DateTime</type>
</CustomField>